Git push 16 April 2025

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -1,5 +1,5 @@
 /* =========================================================
- * fashionCORE - Admin Dashboard Stylesheet
+ * tryontrend - Admin Dashboard Stylesheet
  * Version: 1.0.0
  * Last updated: March 2025
  * ========================================================= */
