--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 /* =========================================================
- * fashionCORE - Virtual Try-On Platform Stylesheet
+ * tryontrend - Virtual Try-On Platform Stylesheet
  * Version: 1.0.0
  * Last updated: March 2025
  * Author: Claude
