--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Admin Dashboard - fashionCORE{% endblock %}
+{% block title %}Admin Dashboard - tryontrend{% endblock %}
 
 {% block additional_head %}
 <style>
