--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Log In - fashionCORE{% endblock %}
+{% block title %}Log In - tryontrend{% endblock %}
 
 {% block additional_head %}
 <style>
