--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Sign Up - fashionCORE{% endblock %}
+{% block title %}Sign Up - tryontrend{% endblock %}
 
 {% block additional_head %}
 <style>
@@ -224,7 +224,7 @@
     <div class="auth-container">
         <div class="auth-header">
             <h1>Create Your Account</h1>
-            <p>Join fashionCORE and experience virtual try-on</p>
+            <p>Join tryontrend and experience virtual try-on</p>
         </div>
         
         <!-- Google Sign-Up Button -->
