--- a/templates/business_try_on.html
+++ b/templates/business_try_on.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Business Virtual Try-On - fashionCORE{% endblock %}
+{% block title %}Business Virtual Try-On - tryontrend{% endblock %}
 
 {% block additional_head %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/business_try_on.css') }}">
@@ -753,7 +753,7 @@
                     <h3>Professional Product Image</h3>
                     <p>High-resolution image ready for your marketing campaigns.</p>
                     <div class="result-actions">
-                        <a id="downloadBtn" href="#" class="btn btn-primary" download="fashionCORE-business-image.png">
+                        <a id="downloadBtn" href="#" class="btn btn-primary" download="tryontrend-business-image.png">
                             <i class="fas fa-download"></i> Download
                         </a>
                         <button id="shareBtn" class="btn btn-secondary">
