--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Shopping Cart - fashionCORE{% endblock %}
+{% block title %}Shopping Cart - tryontrend{% endblock %}
 
 {% block additional_head %}
 <style>
