--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Checkout - fashionCORE{% endblock %}
+{% block title %}Checkout - tryontrend{% endblock %}
 
 {% block additional_head %}
 <script src="https://js.stripe.com/v3/"></script>
