--- a/templates/error.html
+++ b/templates/error.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Error {{ code }} - fashionCORE{% endblock %}
+{% block title %}Error {{ code }} - tryontrend{% endblock %}
 
 {% block content %}
 <div class="container">
