--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Pricing - fashionCORE{% endblock %}
+{% block title %}Pricing - tryontrend{% endblock %}
 
 {% block additional_head %}
 <style>
@@ -547,7 +547,7 @@
 <section class="business-section">
     <div class="container business-container">
         <div class="business-header">
-            <h2>fashionCORE for Business</h2>
+            <h2>tryontrend for Business</h2>
             <p>Integrate virtual try-on into your business workflow</p>
         </div>
         
