--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ product.name }} - fashionCORE{% endblock %}
+{% block title %}{{ product.name }} - tryontrend{% endblock %}
 
 {% block additional_head %}
 <style>
