--- a/templates/products.html
+++ b/templates/products.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Products - fashionCORE{% endblock %}
+{% block title %}Products - tryontrend{% endblock %}
 
 {% block additional_head %}
 <style>
