--- a/templates/try_on.html
+++ b/templates/try_on.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Virtual Try-On - fashionCORE{% endblock %}
+{% block title %}Virtual Try-On - tryontrend{% endblock %}
 
 {% block additional_head %}
 <style>
@@ -551,7 +551,7 @@
             </div>
             
             <div class="result-actions">
-                <a id="downloadBtn" href="#" class="btn btn-primary" download="fashioncore-try-on.png">
+                <a id="downloadBtn" href="#" class="btn btn-primary" download="tryontrend-try-on.png">
                     <i class="fas fa-download"></i> Download Image
                 </a>
                 <button id="tryAgainBtn" class="btn btn-outline">
