--- a/templates/tryon_kling.html
+++ b/templates/tryon_kling.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Virtual Try-On (Kling AI) - fashionCORE{% endblock %}
+{% block title %}Virtual Try-On (Kling AI) - tryontrend{% endblock %}
 
 {% block additional_head %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
