--- a/static/css/animations.css
+++ b/static/css/animations.css
@@ -1,5 +1,5 @@
 /* =========================================================
- * fashionCORE - Animations Stylesheet
+ * tryontrend - Animations Stylesheet
  * Version: 1.0.0
  * Last updated: March 2025
  * ========================================================= */
