--- a/static/css/business_try_on.css
+++ b/static/css/business_try_on.css
@@ -1,5 +1,5 @@
 /* =========================================================
- * fashionCORE - Enhanced Business Virtual Try-On Stylesheet
+ * tryontrend - Enhanced Business Virtual Try-On Stylesheet
  * Version: 2.0.0
  * ========================================================= */
 
