--- a/static/css/components.css
+++ b/static/css/components.css
@@ -1,5 +1,5 @@
 /* =========================================================
- * fashionCORE - UI Components Stylesheet
+ * tryontrend - UI Components Stylesheet
  * Version: 1.0.0
  * Last updated: March 2025
  * ========================================================= */
