--- a/templates/admin_tryon_details.html
+++ b/templates/admin_tryon_details.html
@@ -141,7 +141,7 @@
             
             <div class="timeline-item">
                 <div class="timeline-date">{{ (tryon.created_at + timedelta(seconds=20)).strftime('%B %d, %Y at %H:%M:%S') }}</div>
-                <div class="timeline-content">Started processing with fashionCORE algorithm.</div>
+                <div class="timeline-content">Started processing with tryontrend algorithm.</div>
             </div>
             
             <div class="timeline-item">
