--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}My Profile - fashionCORE{% endblock %}
+{% block title %}My Profile - tryontrend{% endblock %}
 
 {% block content %}
 <div class="container">
